--- a/enterprise-full-stack/novice/01-04/latihan/atm/build.gradle
+++ b/enterprise-full-stack/novice/01-04/latihan/atm/build.gradle
@@ -32,3 +32,7 @@ application {
     // Define the main class for the application.
     mainClassName = 'atm.App'
 }
+
+run {
+    standardInput = System.in
+}
